Edited demo page

--- a/src/app/demo.component.html
+++ b/src/app/demo.component.html
@@ -14,5 +14,6 @@
              [flexBorderSize]="flexBorderSize"
              [flexImageSize]="flexImageSize"
              [maxRowsPerPage]="15"
+             [metadataUri]="'assets/data.json'"
              [galleryName]="galleryName"></gallery>
     <br/><br/>
