add support for showing photos as observable, and observable on add.

--- a/projects/angular2-image-gallery/src/lib/gallery/gallery.component.css
+++ b/projects/angular2-image-gallery/src/lib/gallery/gallery.component.css
@@ -76,3 +76,13 @@
     float: right;
 }
 
+.innerGalleryVisible {
+    visibility: visible;
+}
+
+.innerGalleryNotVisible {
+    visibility: hidden;
+    height: 0px;
+    padding: 0px;
+    margin: 0px;
+}
