--- a/projects/angular2-image-gallery/src/lib/viewer/viewer.component.css
+++ b/projects/angular2-image-gallery/src/lib/viewer/viewer.component.css
@@ -5,7 +5,7 @@
     right: 0;
     height: 100%;
     width: 100%;
-    position: fixed;
+    position: relative;
     background-color: rgba(0, 0, 0, 0.95);
     font-family: sans-serif;
     z-index: 1031;
