add support for comments

--- a/projects/angular2-image-gallery/src/lib/gallery/gallery.component.html
+++ b/projects/angular2-image-gallery/src/lib/gallery/gallery.component.html
@@ -27,4 +27,6 @@
     </div>
 </div>
 
-<viewer></viewer>
+<viewer class="viewer-style"
+        [commentViewerOpenedPropagate]="commentViewerOpenedPropagateSubject"
+        (commentViewerFirstEmmiter)="commentViewerBridge($event)"></viewer>
